Ozhaev Zaynudin cartoon.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:124:61: error: macro "ROUND" passed 22 arguments, but takes just 1
                 ROUND( x + 32*sizeX ), ROUND( y + 32*sizeY ));
                                                             ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp: In function 'void DrawTree2(int, int, double, double, COLORREF)':
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:103:50: error: 'ROUND' was not declared in this scope
                        { ROUND( x +  63*sizeX ), ROUND( y             },
                                                  ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:124:62: error: expected '}' before ';' token
                 ROUND( x + 32*sizeX ), ROUND( y + 32*sizeY ));
                                                              ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:124:62: error: expected '}' before ';' token
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:1:
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:125:21: error: 'SunColor' was not declared in this scope
     txSetFillColor (SunColor);
                     ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:126:5: error: too few arguments to function 'bool {anonymous}::TX::txEllipse(double, double, double, double, HDC)'
     txEllipse ( ROUND( x - 27*sizeX ), ROUND( y - 27*sizeY )),
     ^
C:\Users\zainu\Desktop\курс\TX\TXLib.h:13044:6: note: declared here
 bool txEllipse (double x0, double y0, double x1, double y1, HDC dc /*= txDC()*/)
      ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:127:61: error: expected ';' before ')' token
                 ROUND( x + 27*sizeX ), ROUND( y + 27*sizeY ));
                                                             ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:99:11: warning: unused variable 'Tree2' [-Wunused-variable]
     POINT Tree2 [7] = {{        x              ,        y             },
           ^
---------------------------------------------------------------------------------------------
[25.04.2021 13:42:24,35 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\1proekt\1proekt> g++.exe "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp" -o "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
